...
private fun BootstrapLoginControls(
  state: BootstrapScreen.State,
  scrollState: LazyListState,
  showHeader: Boolean,
  modifier: Modifier,
) {
  LazyColumn(modifier.testTag("bootstrap-content"), state = scrollState,
    contentPadding = PaddingValues(if (showHeader) ShittimSpacing.Large else 0.dp),
    verticalArrangement = Arrangement.spacedBy(ShittimSpacing.ExtraLarge, Alignment.CenterVertically),
    horizontalAlignment = Alignment.CenterHorizontally) {
    if (showHeader) item(key = "brand") {
      BootstrapHeader(Modifier.fillMaxWidth(), compact = false)
    }
...
